@@ -27,6 +27,7 @@ importFrom("RColorBrewer", "brewer.pal")
 importFrom("GenomeInfoDb", "seqnames")
 importFrom("GenomicRanges", "GRanges")
 importFrom("SummarizedExperiment", "rowRanges")
+importFrom("Rsamtools", "ScanBamParam", "scanBamFlag", "scanBam")
 import(IRanges)
 importFrom("S4Vectors", "queryHits", "subjectHits")
 importFrom("grDevices", "colorRampPalette", "dev.off", "png")
