@@ -11,7 +11,7 @@ BiocStyle::latex()
 @ 
 
 \title{PureCN: Estimating tumor purity, ploidy, LOH and SNV status using hybrid
-capture NGS data}
+capture sequencing data}
 \author{Markus Riester}
 
 \begin{document}
@@ -22,9 +22,9 @@ capture NGS data}
 \section{Background}
 
 \Biocpkg{PureCN} is a purity and ploidy aware copy number caller for cancer
-samples inspired by the \software{ABSOLUTE} algorithm \cite{Carter2012}.  It was
-designed for hybrid caputure next generation sequencing (NGS) data, especially
-with medium-sized targeted gene panels without matching normal samples in mind.
+samples inspired by the \software{ABSOLUTE} algorithm \cite{Carter2012}.  It
+was designed for hybrid caputure sequencing data, especially with medium-sized
+targeted gene panels without matching normal samples in mind.
 
 It can be used to enhance existing segmentation and normalization algorithms.
 If the correct purity and ploidy solution was identified, \Biocpkg{PureCN} can
@@ -81,9 +81,11 @@ provided in \software{GATK DepthOfCoverage} format:
 
 \Biocpkg{PureCN} will only use data from the columns "Target",
 "total\_coverage", and "average\_coverage", all other columns are optional. If
-\software{GATK} is not available, then we refer to the \CRANpkg{ExomeCNV}
-\cite{Sathirapongsasuti2011} package and documentation, which provides scripts
-for generating coverage files from BAM files. 
+\software{GATK} is not available, then the
+\Rfunction{calculateBamCoverageFromInterval} function can be used to generate
+the required coverage data from BAM files.  We also refer to the
+\CRANpkg{ExomeCNV} \cite{Sathirapongsasuti2011} package and documentation,
+which provides different scripts for generating coverage files from BAM files. 
 
 Germline SNPs and somatic mutations are expected in a single VCF file. This VCF
 should contain a DB info flag for dbSNP membership. VCF files generated by
